Use amazoncorretto:8 to avoid auto upgrading to java11

--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ task copyJarToDocker(type: Copy) {
 }
 
 task buildDockerFile(type: Dockerfile) {
-    from("amazoncorretto:latest")
+    from("amazoncorretto:8")
     workingDir("/tmp/chime-streaming-transcribe/")
     addFile(archivesBaseName + ".jar", "./lib/")
 }
