--- a/build.gradle
+++ b/build.gradle
@@ -44,8 +44,8 @@ task dockerJar(type: Jar) {
     with jar
 }
 
-task copyJarToDocker(type: Copy) {
-    from dockerJar
+task copyJarAndNoticesToDocker(type: Copy) {
+    from dockerJar, "$projectDir/NOTICES"
     into "$buildDir/docker"
 }
 
@@ -53,10 +53,11 @@ task buildDockerFile(type: Dockerfile) {
     from("amazoncorretto:8")
     workingDir("/tmp/chime-streaming-transcribe/")
     addFile(archivesBaseName + ".jar", "./lib/")
+    addFile("NOTICES", "./")
 }
 
 task buildDockerImage(type: DockerBuildImage) {
-    dependsOn(copyJarToDocker, buildDockerFile)
+    dependsOn(copyJarAndNoticesToDocker, buildDockerFile)
     images.add('chime-transcribe:latest')
 }
 
