--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'com.bmuschko.docker-remote-api' version '6.4.0'
+    id 'io.freefair.lombok' version '5.0.1'
 }
 
 import com.bmuschko.gradle.docker.tasks.image.Dockerfile
@@ -32,7 +33,9 @@ dependencies {
             'org.apache.commons:commons-lang3:3.6',
 
             // need for argument parsing
-            'commons-cli:commons-cli:1.4'
+            'commons-cli:commons-cli:1.4',
+
+            'org.projectlombok:lombok:1.18.12'
     )
 }
 
