--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
             'com.amazonaws:aws-lambda-java-core:1.2.0',
             'com.amazonaws:aws-lambda-java-events:2.2.6',
             'com.amazonaws:aws-java-sdk-cloudwatch:1.11.777',
+            'com.amazonaws:aws-java-sdk-apigatewaymanagementapi:1.11.784',
             'com.amazonaws:amazon-kinesis-video-streams-parser-library:1.0.13',
             'org.slf4j:slf4j-api:1.7.24',
             'org.slf4j:slf4j-log4j12:1.7.24',
