--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,13 @@ dependencies {
     compile(
             'software.amazon.awssdk:transcribestreaming:2.13.10',
 
-            'com.amazonaws:aws-java-sdk-dynamodb:1.11.777',
-            'com.amazonaws:aws-java-sdk-kinesisvideo:1.11.777',
-            'com.amazonaws:aws-lambda-java-core:1.2.0',
-            'com.amazonaws:aws-lambda-java-events:2.2.6',
-            'com.amazonaws:aws-java-sdk-cloudwatch:1.11.777',
+            'com.amazonaws:aws-java-sdk-dynamodb:1.11.784',
+            'com.amazonaws:aws-java-sdk-kinesisvideo:1.11.784',
+            'com.amazonaws:aws-lambda-java-core:1.2.1',
+            'com.amazonaws:aws-lambda-java-events:3.1.0',
+            'com.amazonaws:aws-java-sdk-cloudwatch:1.11.784',
             'com.amazonaws:aws-java-sdk-apigatewaymanagementapi:1.11.784',
+            'com.amazonaws:aws-java-sdk-ecs:1.11.784',
             'com.amazonaws:amazon-kinesis-video-streams-parser-library:1.0.13',
             'org.slf4j:slf4j-api:1.7.24',
             'org.slf4j:slf4j-log4j12:1.7.24',
