--- a/build.gradle
+++ b/build.gradle
@@ -26,27 +26,28 @@ java {
 dependencies {
     compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.2.2'
     compile(
-            'software.amazon.awssdk:transcribestreaming:2.16.16',
+            'software.amazon.awssdk:transcribestreaming:2.17.271',
 
-            'com.amazonaws:aws-java-sdk-dynamodb:1.11.972',
-            'com.amazonaws:aws-java-sdk-kinesisvideo:1.11.972',
+            'com.amazonaws:aws-java-sdk-dynamodb:1.12.300',
+            'com.amazonaws:aws-java-sdk-kinesisvideo:1.12.300',
             'com.amazonaws:aws-lambda-java-core:1.2.1',
-            'com.amazonaws:aws-lambda-java-events:3.1.0',
-            'com.amazonaws:aws-java-sdk-cloudwatch:1.11.972',
-            'com.amazonaws:aws-java-sdk-apigatewaymanagementapi:1.11.972',
-            'com.amazonaws:aws-java-sdk-ecs:1.11.972',
-            'com.amazonaws:amazon-kinesis-video-streams-parser-library:1.0.15',
-            'org.slf4j:slf4j-api:1.7.24',
-            'org.slf4j:slf4j-log4j12:1.7.24',
+            'com.amazonaws:aws-lambda-java-events:3.11.0',
+            'com.amazonaws:aws-java-sdk-cloudwatch:1.12.300',
+            'com.amazonaws:aws-java-sdk-apigatewaymanagementapi:1.12.300',
+            'com.amazonaws:aws-java-sdk-ecs:1.12.300',
+            'com.amazonaws:amazon-kinesis-video-streams-parser-library:1.2.4',
+            'org.slf4j:slf4j-api:2.0.1',
+            'org.slf4j:slf4j-reload4j:2.0.1',
+            'javax.xml.bind:jaxb-api:2.3.1',
 
             // need this for our async clients
-            'software.amazon.awssdk:netty-nio-client:2.16.16',
+            'software.amazon.awssdk:netty-nio-client:2.17.271',
 
             // need this for logging
-            'org.apache.commons:commons-lang3:3.6',
+            'org.apache.commons:commons-lang3:3.12.0',
 
             // need for argument parsing
-            'commons-cli:commons-cli:1.4'
+            'commons-cli:commons-cli:1.5.0'
     )
 }
 
